--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Figuring Out Your Legal Path</td>
+                        <td>Discovering Your Legal Path</td>
                         <td>Assessments tailored to legal careers.</td>
                     </tr>
                     <tr>
-                        <td>Finding Legal Opportunities</td>
-                        <td>Information on legal career paths.</td>
+                        <td>Obtaining Legal Opportunities</td>
+                        <td>Information on legal career paths and job application process.</td>
                     </tr>
                     <tr>
-                        <td>Creating a Winning Legal CV</td>
+                        <td>Creating a Professional Legal CV</td>
                         <td>CV templates and examples for legal roles.</td>
                     </tr>
                     <tr>
-                        <td>Optimizing Your Legal LinkedIn</td>
+                        <td>Optimizing Your LinkedIn</td>
                         <td>Guidance on building a professional LinkedIn profile.</td>
                     </tr>
                     <tr>
-                        <td>Acing Legal Interviews</td>
+                        <td>Tips to Prepare for Legal Interviews</td>
                         <td>Mock interviews focused on legal questions.</td>
                     </tr>
                     <tr>
@@ -149,5 +149,6 @@
             </div>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script> </body>
+    <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
+</body>
 </html>
