--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Discovering Your Legal Path</td>
+                        <td>Your Legal Path</td>
                         <td>Assessments tailored to legal careers.</td>
                     </tr>
                     <tr>
-                        <td>Obtaining Legal Opportunities</td>
+                        <td>Legal Opportunities</td>
                         <td>Information on legal career paths and job application process.</td>
                     </tr>
                     <tr>
-                        <td>Creating a Professional Legal CV</td>
+                        <td>Creating a Legal CV</td>
                         <td>CV templates and examples for legal roles.</td>
                     </tr>
                     <tr>
-                        <td>Optimizing Your LinkedIn</td>
+                        <td>Optimizing Your Profile</td>
                         <td>Guidance on building a professional LinkedIn profile.</td>
                     </tr>
                     <tr>
-                        <td>Tips to Prepare for Legal Interviews</td>
+                        <td>Tips for Legal Interviews</td>
                         <td>Mock interviews focused on legal questions.</td>
                     </tr>
                     <tr>
