--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                 <h2>Basic Plan</h2>
                 <p>Foundational support for your legal career journey.</p>
             </div>
-            <a href="#" class="cta-button">Get Started</a>
+            <!-- Updated Get Started button with a mailto link -->
+            <a href="mailto:admin@salp.work?subject=Inquiry%20About%20Legal%20Career%20Services%20-%20Basic%20Plan&body=Dear%20%5BYour%20Name%5D,%0D%0A%0D%0AI%20hope%20this%20email%20finds%20you%20well.%20I%20am%20interested%20in%20learning%20more%20about%20the%20Legal%20Career%20Services%20%E2%80%93%20Basic%20Plan%20and%20how%20it%20can%20support%20my%20legal%20career%20journey.%0D%0A%0D%0AFrom%20the%20details%20provided,%20I%20understand%20that%20this%20plan%20includes:%0D%0A- Career%20assessments%20tailored%20to%20legal%20roles%0D%0A- Information%20on%20legal%20career%20paths%20and%20job%20applications%0D%0A- CV%20templates%20and%20examples%20for%20legal%20positions%0D%0A- Guidance%20on%20optimizing%20my%20LinkedIn%20profile%0D%0A- Mock%20interviews%20focused%20on%20legal%20questions%0D%0A- A%2030-minute%20career%20consultation%0D%0A- Networking%20advice%20and%20job%20board%20resources%0D%0A- Access%20to%20essential%20legal%20career%20resources%0D%0A%0D%0AI%20would%20love%20to%20discuss%20how%20this%20service%20can%20help%20me%20achieve%20my%20career%20goals.%20Please%20let%20me%20know%20the%20next%20steps.%0D%0A%0D%0ALooking%20forward%20to%20your%20response!%0D%0A%0D%0ABest%20regards,%0D%0A%5BYour%20Name%5D%0D%0A%5BYour%20Contact%20Information%5D" class="cta-button">Get Started</a>
         </div>
         <div class="right-section">
             <table>
